# copilot-agent-ref

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md
.github/: copilot-instructions.md
.github/instructions/: markdown.instructions.md  python.instructions.md  typescript.instructions.md
.github/skills/python-expert/: SKILL.md
.github/skills/research-assistant/: LICENSE.txt  SKILL.md
.github/skills/research-assistant/references/: research_methodologies.md
examples/python-project/: AGENTS.md  README.md  copilot-instructions.md  pyproject.toml  tests.instructions.md
examples/typescript-project/: README.md  copilot-instructions.md
